<resources>
    <string name="app_name">DemoSQLite1</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="input_data">Input Data</string>
    <string name="informasi">Informasi</string>
    <string name="description_info">Aplikasi Kampusku merupakan aplikasi yang digunakan untuk pendataan mahasiswa. User nantinya bisa menambahkan, update, dan hapus data mahasiswa</string>
    <string name="nama_saya">Created By : Karang Reksa Ginolla</string>
    <string name="version">Version : 1.1</string>
    <string name="website">Web : likeaboss.com</string>
</resources>
